<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_background">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="25dp">

            <TextView
                android:id="@+id/forgot_pass_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/phone_input_layout"
                style="@style/login_textinput_layout_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forgot_pass_title"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/phone_et"
                    style="@style/login_editext_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:maxLength="10" />


            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/confirm_btn"
                style="@style/dark_app_color_button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone_input_layout"
                android:layout_margin="10dp"
                android:text="@string/confirm" />

        </RelativeLayout>

    </RelativeLayout>

</layout>