<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/stroke_color">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:padding="25dp">

            <TextView
                android:id="@+id/forgot_pass_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_password"
                android:textColor="@color/dark_app_button_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/old_password_input_layout"
                style="@style/login_textinput_layout_style_1"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forgot_pass_title"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/old_pwd_et"
                    style="@style/login_editext_style_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/old_password"
                    android:textColorHint="@color/dark_app_button_color"
                    android:textColor="@color/dark_app_button_color"
                    android:inputType="text"
                    android:maxLength="10" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/new_pwd_input_layout"
                style="@style/login_textinput_layout_style_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/old_password_input_layout"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/new_pwd_et"
                    style="@style/login_editext_style_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_password"
                    android:textColorHint="@color/dark_app_button_color"
                    android:textColor="@color/dark_app_button_color"
                    android:inputType="textPassword"
                    android:maxLength="10" />


            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/conf_pwd_input_layout"
                style="@style/login_textinput_layout_style_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/new_pwd_input_layout"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/conf_pwd_et"
                    style="@style/login_editext_style_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:textColorHint="@color/dark_app_button_color"
                    android:textColor="@color/dark_app_button_color"
                    android:inputType="textPassword"
                    android:maxLength="10" />


            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/confirm_btn"
                style="@style/dark_app_color_button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/conf_pwd_input_layout"
                android:layout_margin="10dp"
                android:text="@string/confirm" />

        </RelativeLayout>

    </RelativeLayout>

    </RelativeLayout>

</layout>