<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:id="@+id/order_num_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginStart="2dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/blue_app_logo" />

            <TextView
                android:id="@+id/oder_id_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/history_dr_id"
                android:textColor="@color/app_button_color"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/status_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/order_num_layout"
            android:layout_marginEnd="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/status_title_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/status"
                android:textSize="11sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=":"
                android:textSize="11sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/status_val_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/delivered"
                android:textSize="11sp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/company_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/status_layout"
            android:layout_marginEnd="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/company_name_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/company_name"
                android:textSize="11sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=":"
                android:textSize="11sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/company_name_val_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/mersat"
                android:textSize="11sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/cod_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/company_name_layout"
            android:layout_marginEnd="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:visibility="gone"
            android:weightSum="2">

            <TextView
                android:id="@+id/cod_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cod_title"
                android:textAllCaps="true"
                android:textSize="11sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=":"
                android:textSize="11sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cod_val_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/cod_amount"
                android:textSize="11sp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:id="@+id/view_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/cod_layout"
            android:layout_marginTop="5dp"
            android:background="@color/text_hint_color" />

    </RelativeLayout>

</layout>