<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:padding="15dp"
            android:text="Title"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/other_resaons_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/stroke_color"
            android:padding="10dp"
            android:visibility="gone">

            <EditText
                android:id="@+id/reason_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:lines="8"
                android:maxLength="256"
                android:maxLines="10"
                android:minLines="6" />

            <TextView
                android:id="@+id/reason_text_words_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/reason_et"
                android:text="@string/help_text_count"
                android:textColor="@color/delivery_cancel" />

            <Button
                android:id="@+id/other_resaons_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reason_text_words_tv"
                android:layout_centerHorizontal="true"
                android:background="@drawable/dark_blue_button_bg"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </RelativeLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/reasons_rcv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" />

        <LinearLayout
            android:id="@+id/bottom_button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/dismiss_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/app_color_button_bg"
                android:text="@string/dismiss"
                android:textAllCaps="false"
                android:textColor="@color/dark_app_button_color"
                android:textSize="14sp" />

            <Button
                android:id="@+id/confirm_cancellation_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/dark_blue_button_bg"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</layout>