<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/login_parent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_background"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/app_logo_iv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="40dp"
            android:src="@drawable/app_logo" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/app_logo_iv">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"
                android:padding="10dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/login_user_id_layout"
                    style="@style/login_textinput_layout_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <EditText
                        android:id="@+id/login_user_id_et"
                        style="@style/login_editext_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone"
                        android:inputType="phone" />


                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/login_password_layout"
                    style="@style/login_textinput_layout_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_user_id_layout"
                    android:layout_margin="10dp">

                    <EditText
                        android:id="@+id/login_password_et"
                        style="@style/login_editext_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword" />


                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:id="@+id/register_signup_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_password_layout"
                    android:layout_margin="10dp"
                    android:padding="5dp">

                    <Button
                        android:id="@+id/login_btn"
                        style="@style/dark_app_color_button_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:text="@string/login" />

                </LinearLayout>

                <TextView
                    android:id="@+id/forgot_pass_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/register_signup_layout"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:padding="10dp"
                    android:text="@string/forgot_password"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </RelativeLayout>

        </ScrollView>
    </RelativeLayout>
</layout>